--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -260,7 +260,7 @@
 </head>
 <body>
   <div class="hero">
-    <img src="https://images.unsplash.com/photo-1728206869708-8513f46cf160?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Latar belakang alam" class="bg" />
+    <img src="https://plus.unsplash.com/premium_photo-1673697239981-389164b7b87f?q=80&w=1144&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Latar belakang alam" class="bg" />
     <h1 class="main-title">Peta Tempat Makanan</h1>
 
     <div class="container-wrapper" id="main-container">
