--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -6,6 +6,7 @@
   <title>Hero Gambar + Kontainer Animasi</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <style>
     *, *::before, *::after {
@@ -157,14 +158,15 @@
       }
     }
 
+    /* Anggota Container Styles */
     #anggota-container {
       position: absolute;
       bottom: -100%;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.95);
-      transition: bottom 0.5s ease;
+      background-color: rgba(255, 255, 255, 0.98); /* Slightly less transparent */
+      transition: bottom 0.5s ease-out;
       z-index: 3;
       display: flex;
       flex-direction: column;
@@ -172,6 +174,7 @@
       padding: 2rem 1rem;
       text-align: left;
       overflow-y: auto;
+      box-shadow: 0 -5px 20px rgba(0,0,0,0.1);
     }
 
     #anggota-container.show {
@@ -181,50 +184,121 @@
     .anggota-box {
       max-width: 600px;
       width: 100%;
-      background: white;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      background: linear-gradient(145deg, #f9f9f9, #e0e0e0);
+      border-radius: 16px;
+      padding: 2.5rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      animation: slideInFromTop 0.6s ease-out forwards;
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+
+    @keyframes slideInFromTop {
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
 
     .anggota-box h2 {
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.8rem;
       text-align: center;
+      color: #2c3e50;
+      position: relative;
+      padding-bottom: 10px;
+    }
+
+    .anggota-box h2::after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      width: 60px;
+      height: 3px;
+      background-color: #3498db;
+      border-radius: 2px;
     }
 
     .anggota-box ol {
-      padding-left: 1.5rem;
-      line-height: 1.6;
+      padding-left: 1.8rem;
+      line-height: 1.8;
+      list-style: none; /* Remove default list style */
+    }
+
+    .anggota-box ol li {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+      color: #555;
+      position: relative;
+      padding-left: 25px; /* Space for custom bullet */
+      animation: fadeInListItem 0.5s ease-out forwards;
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+
+    .anggota-box ol li:nth-child(1) { animation-delay: 0.1s; }
+    .anggota-box ol li:nth-child(2) { animation-delay: 0.2s; }
+    .anggota-box ol li:nth-child(3) { animation-delay: 0.3s; }
+    .anggota-box ol li:nth-child(4) { animation-delay: 0.4s; }
+    .anggota-box ol li:nth-child(5) { animation-delay: 0.5s; }
+    .anggota-box ol li:nth-child(6) { animation-delay: 0.6s; }
+
+    @keyframes fadeInListItem {
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    .anggota-box ol li::before {
+      content: '\f00c'; /* FontAwesome check icon */
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900;
+      position: absolute;
+      left: 0;
+      color: #27ae60; /* Green checkmark */
+      font-size: 1rem;
     }
 
     .close-btn {
-      margin-top: 1.5rem;
-      padding: 0.6rem 1.2rem;
-      background-color: #2c3e50;
+      margin-top: 2rem;
+      padding: 0.8rem 1.8rem;
+      background-color: #3498db;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      font-size: 1.1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .close-btn:hover {
-      background-color: #1a242f;
+      background-color: #2980b9;
+      transform: translateY(-2px);
     }
 
+    /* Modal Container Styles */
     .modal-container {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: white;
+      background: rgba(255, 255, 255, 0.98); /* Slightly less transparent */
       z-index: 4;
       display: none;
       flex-direction: column;
       padding: 1rem;
       overflow-y: auto;
+      animation: fadeInModal 0.5s ease-out forwards;
+    }
+
+    @keyframes fadeInModal {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     .modal-container.show {
@@ -234,6 +308,11 @@
     .modal-container .close-btn {
       align-self: flex-end;
       margin-bottom: 1rem;
+      background-color: #e74c3c; /* Red close button */
+    }
+
+    .modal-container .close-btn:hover {
+      background-color: #c0392b;
     }
 
     .modal-container iframe {
@@ -242,18 +321,206 @@
       min-height: 400px;
       border: none;
       border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
+
+    /* Info Modal Specific Styles */
+    #infoContainer .info-content {
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 1.5rem;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      animation: scaleIn 0.5s ease-out forwards;
+      transform: scale(0.9);
+      opacity: 0;
+    }
+
+    @keyframes scaleIn {
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    #infoContainer h3 {
+      font-size: 2rem;
+      color: #2c3e50;
+      text-align: center;
+      margin-bottom: 1.5rem;
+      position: relative;
+      padding-bottom: 10px;
+    }
+
+    #infoContainer h3::after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 4px;
+      background-color: #f39c12;
+      border-radius: 2px;
+    }
+
+    #infoContainer h4 {
+      font-size: 1.5rem;
+      color: #34495e;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      border-left: 5px solid #3498db;
+      padding-left: 10px;
+      animation: slideInLeft 0.5s ease-out forwards;
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+
+    #infoContainer h4:nth-of-type(1) { animation-delay: 0.1s; }
+    #infoContainer h4:nth-of-type(2) { animation-delay: 0.2s; }
+    #infoContainer h4:nth-of-type(3) { animation-delay: 0.3s; }
+    #infoContainer h4:nth-of-type(4) { animation-delay: 0.4s; }
+
+    @keyframes slideInLeft {
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    #infoContainer p {
+      font-size: 1.1rem;
+      line-height: 1.7;
+      color: #666;
+      margin-bottom: 1rem;
+      animation: fadeInText 0.5s ease-out forwards;
+      opacity: 0;
+    }
+
+    #infoContainer p:nth-of-type(1) { animation-delay: 0.2s; }
+    #infoContainer p:nth-of-type(2) { animation-delay: 0.5s; }
+
+    @keyframes fadeInText {
+      to { opacity: 1; }
+    }
+
+    #infoContainer table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1.5rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      border-radius: 8px;
+      overflow: hidden;
+      animation: fadeInTable 0.7s ease-out forwards;
+      opacity: 0;
+      transform: translateY(20px);
+    }
+
+    @keyframes fadeInTable {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    #infoContainer th, #infoContainer td {
+      border: 1px solid #ddd;
+      padding: 12px 15px;
+      text-align: left;
+      font-size: 1rem;
+    }
+
+    #infoContainer th {
+      background-color: #f2f2f2;
+      font-weight: 600;
+      color: #333;
+    }
+
+    #infoContainer tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    #infoContainer tr:hover {
+      background-color: #f1f1f1;
+    }
+
+    #infoContainer ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 1rem;
+    }
+
+    #infoContainer ul li {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+      color: #555;
+      position: relative;
+      padding-left: 25px;
+      animation: fadeInListItem 0.5s ease-out forwards;
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+
+    #infoContainer ul li:nth-child(1) { animation-delay: 0.6s; }
+    #infoContainer ul li:nth-child(2) { animation-delay: 0.7s; }
+    #infoContainer ul li:nth-child(3) { animation-delay: 0.8s; }
+    #infoContainer ul li:nth-child(4) { animation-delay: 0.9s; }
+    #infoContainer ul li:nth-child(5) { animation-delay: 1.0s; }
+    #infoContainer ul li:nth-child(6) { animation-delay: 1.1s; }
+    #infoContainer ul li:nth-child(7) { animation-delay: 1.2s; }
+
+    #infoContainer ul li strong {
+      color: #2c3e50;
+    }
+
+    #infoContainer ul li::before {
+      content: '\f061'; /* FontAwesome arrow-right icon */
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900;
+      position: absolute;
+      left: 0;
+      color: #3498db;
+      font-size: 0.9rem;
+      top: 5px;
+    }
+
     @media (max-width: 480px) {
       .anggota-box {
-        padding: 1.2rem;
+        padding: 1.5rem;
       }
 
       .anggota-box h2 {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
+      }
+
+      .anggota-box ol li {
+        font-size: 1rem;
+      }
+
+      .close-btn {
+        padding: 0.7rem 1.5rem;
+        font-size: 1rem;
       }
 
       .modal-container iframe {
         min-height: 300px;
+      }
+
+      #infoContainer .info-content {
+        padding: 1rem;
+      }
+
+      #infoContainer h3 {
+        font-size: 1.8rem;
+      }
+
+      #infoContainer h4 {
+        font-size: 1.3rem;
+      }
+
+      #infoContainer p, #infoContainer th, #infoContainer td, #infoContainer ul li {
+        font-size: 0.95rem;
       }
     }
   </style>
@@ -305,7 +572,7 @@
     <!-- Modal Informasi -->
     <div class="modal-container" id="infoContainer">
       <button class="close-btn" onclick="tutupModal('infoContainer')">Tutup</button>
-      <div style="flex-grow: 1; overflow-y: auto;">
+      <div class="info-content">
         <h3>Materi Lengkap Seputar WebGIS</h3>
 
         <h4>1. Pengertian WebGIS</h4>
